--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "rm": "rimraf",
     "dev": "rimraf dist && parcel src/index.html",
-    "build": "rimraf dist && parcel build src/index.html"
+    "build": "rimraf dist && rimraf .cache && parcel build src/index.html"
   },
   "keywords": [],
   "author": "",
