--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,16 @@
 {
-  "env": {
-    "browser": true,
-    "es2020": true
-  },
-  "extends": ["airbnb-base"],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaVersion": 11,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint"],
-  "rules": {
-    "linebreak-style": 0
-  }
+	"env": {
+		"browser": true,
+		"es2020": true
+	},
+	"extends": ["airbnb-base"],
+	"parserOptions": {
+		"ecmaVersion": 11,
+		"sourceType": "module"
+	},
+	"rules": {
+		"indent": [2, "tab"],
+		"no-tabs": 0,
+		"linebreak-style": 0
+	}
 }
