completed table render function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,7 @@
 		"indent": [2, "tab"],
 		"no-tabs": 0,
 		"linebreak-style": 0,
-		"import/prefer-default-export": 0
+		"import/prefer-default-export": 0,
+		"object-curly-newline": 0
 	}
 }
