--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,8 @@
 		"no-tabs": 0,
 		"linebreak-style": 0,
 		"import/prefer-default-export": 0,
-		"object-curly-newline": 0
+		"object-curly-newline": 0,
+		"implicit-arrow-linebreak": 0,
+		"comma-dangle": 0
 	}
 }
