--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": " rm -rf dist && parcel index.html",
-    "build": "rimraf dist && rimraf .cache && parcel build index.html"
+    "build": "rimraf dist && rimraf .cache && parcel build index.html",
+    "predeploy": "rm -rf .cache && rm -rf dist && parcel build index.html --public-url /countries",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -19,12 +21,12 @@
     "eslint": "^7.6.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "d3": "^5.16.0",
-    "topojson": "^3.0.2",
-    "versor": "^0.1.2"
+    "topojson": "^3.0.2"
   }
 }
