modified parcel script

--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": " rm -rf dist && parcel index.html",
-    "build": "rimraf dist && rimraf .cache && parcel build index.html",
-    "predeploy": "rm -rf .cache && rm -rf dist && parcel build index.html --public-url /countries",
+    "dev": " rm -rf dist && parcel ./src/index.html",
+    "build": "rimraf dist && rimraf .cache && parcel build ./src/index.html",
+    "predeploy": "rm -rf .cache && rm -rf dist && parcel build ./src/index.html --public-url /countries",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
