--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "postcss-modules": "^3.2.1"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.6",
     "babel-polyfill": "^6.26.0",
     "d3": "^5.16.0",
     "topojson": "^3.0.2"
