--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": " rm -rf dist && parcel ./src/index.html",
     "build": "rimraf dist && rimraf .cache && parcel build ./src/index.html",
-    "predeploy": "rm -rf .cache && rm -rf dist && parcel build ./src/index.html --public-url /countries",
+    "predeploy": "rm -rf dist && parcel build ./src/index.html --public-url /countries",
     "deploy": "gh-pages -d dist"
   },
   "keywords": [],
