--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "help2md": "jsdoc2md src/source/helper/*.js > src/source/helper/README.md",
     "dev": " rm -rf dist && parcel ./src/index.html",
     "build": "rimraf dist && rimraf .cache && parcel build ./src/index.html",
     "predeploy": "rm -rf dist && parcel build ./src/index.html --public-url /countries",
@@ -22,6 +23,8 @@
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
+    "jsdoc": "^3.6.5",
+    "jsdoc-to-markdown": "^6.0.1",
     "parcel-bundler": "^1.12.4",
     "postcss-modules": "^3.2.1"
   },
