--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,20 @@
 {
-	"env": {
-		"browser": true,
-		"es2020": true
-	},
-	"extends": ["airbnb-base"],
-	"parserOptions": {
-		"ecmaVersion": 11,
-		"sourceType": "module"
-	},
-	"rules": {
-		"indent": [2, "tab"],
-		"no-tabs": 0,
-		"linebreak-style": 0,
-		"import/prefer-default-export": 0,
-		"object-curly-newline": 0,
-		"implicit-arrow-linebreak": 0,
-		"comma-dangle": 0
-	}
+  "env": {
+    "browser": true,
+    "es2020": true
+  },
+  "extends": ["airbnb-base"],
+  "parserOptions": {
+    "ecmaVersion": 11,
+    "sourceType": "module"
+  },
+  "rules": {
+    "no-tabs": 0,
+    "linebreak-style": 0,
+    "import/prefer-default-export": 0,
+    "object-curly-newline": 0,
+    "implicit-arrow-linebreak": 0,
+    "comma-dangle": 0,
+    "operator-linebreak": 0
+  }
 }
